@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure</artifactId>
-        <version>1.18.5-SNAPSHOT</version>
+        <version>1.20.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -37,15 +37,6 @@
             </resource>
         </resources>
         <plugins>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>-Xmx4g -Xms4g -XX:MaxPermSize=1024m</argLine>
-                    <workingDirectory>${project.parent.basedir}</workingDirectory>
-                    <!-- Required so that compiled mode web server integration tests work, the PureJavaCompiler needs this to set correct classpath-->
-                    <useManifestOnlyJar>false</useManifestOnlyJar>
-                </configuration>
-            </plugin>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
                 <configuration>
